--- a/IPSX/IPSX.entitlements
+++ b/IPSX/IPSX.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.ipsx.cvi</string>
+		<string>$(AppIdentifierPrefix)com.ipsx.mobile</string>
 	</array>
 </dict>
 </plist>
