Implement FB Login

--- a/IPSX/Info.plist
+++ b/IPSX/Info.plist
@@ -28,9 +28,23 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>prefs</string>
+				<string>fb2097656980504446</string>
 			</array>
 		</dict>
 	</array>
+	<key>FacebookAppID</key>
+	<string>2097656980504446</string>
+	<key>FacebookDisplayName</key>
+	<string>IPSX</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We want to get your profile picture for this app</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
