Starting to implement deep linking for login, activate delete account + cleaning

--- a/IPSX/Info.plist
+++ b/IPSX/Info.plist
@@ -27,6 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>com.ipsx.mobile</string>
 				<string>prefs</string>
 				<string>fb2097656980504446</string>
 			</array>
